Making questions more explicit and clear

--- a/main.tex
+++ b/main.tex
@@ -21,6 +21,13 @@
 \usepackage[utf8]{inputenc}
 \usepackage[english]{babel}
 \usepackage{multicol}
+
+
+\titleformat{\subsection}
+[display] % shape
+{\large\bfseries}
+{\thesubsection.}{0.5em}{}
+
 \newcommand{\norm}[1]{\left\lVert#1\right\rVert}
 \newcommand{\abs}[1]{\left\vert#1\right\vert}
 \newcommand{\bracket}[1]{\left(#1\right)}
